<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.com.zlct.diamondgo.MainActivity">
    <FrameLayout
        android:id="@+id/fl_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/colorLightGray"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/rg_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorWhite">
            <RadioButton
                android:id="@+id/rb_main0"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/slc_main0"
                android:drawablePadding="2dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/main0"
                android:textSize="10sp"
                android:textColor="@drawable/slc_color_red_gray"/>
            <RadioButton
                android:id="@+id/rb_main1"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/slc_main1"
                android:drawablePadding="1dp"
                android:paddingTop="6dp"
                android:paddingBottom="4dp"
                android:text="@string/main1"
                android:textSize="10sp"
                android:textColor="@drawable/slc_color_red_gray"/>
            <RadioButton
                android:id="@+id/rb_main2"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/slc_main2"
                android:drawablePadding="1dp"
                android:paddingTop="6dp"
                android:paddingBottom="4dp"
                android:text="@string/main2"
                android:textSize="10sp"
                android:textColor="@drawable/slc_color_red_gray"/>
            <RadioButton
                android:id="@+id/rb_main3"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/slc_main3"
                android:drawablePadding="1dp"
                android:paddingTop="6dp"
                android:paddingBottom="4dp"
                android:text="@string/main3"
                android:textSize="10sp"
                android:textColor="@drawable/slc_color_red_gray"/>
            <RadioButton
                android:id="@+id/rb_main4"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/slc_main4"
                android:drawablePadding="1dp"
                android:paddingTop="6dp"
                android:paddingBottom="4dp"
                android:text="@string/main4"
                android:textSize="10sp"
                android:textColor="@drawable/slc_color_red_gray"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="1px"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rb_main3Fake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:button="@null"
                    android:drawableTop="@drawable/slc_main3"
                    android:drawablePadding="1dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="4dp"
                    android:text="@string/main3"
                    android:textSize="10sp"
                    android:visibility="invisible"/>

                <cn.com.zlct.diamondgo.custom.CircleView
                    android:id="@+id/tv_mainRedDot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-5dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/rb_main3Fake"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="1"
                    android:textSize="10sp"
                    android:textColor="@color/colorWhite"
                    android:visibility="visible"/>
            </RelativeLayout>
            <View
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="1px"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
